crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__empty_with_items.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/empty_with_items.py
---
## AST

 ```
Module(
    ModModule {
        range: 0..105,
        body: [
            With(
                StmtWith {
                    range: 88..98,
                    is_async: false,
                    items: [],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 95..98,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 95..98,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            Expr(
                StmtExpr {
                    range: 100..105,
                    value: BinOp(
                        ExprBinOp {
                            range: 100..105,
                            left: Name(
                                ExprName {
                                    range: 100..101,
                                    id: "x",
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: Name(
                                ExprName {
                                    range: 104..105,
                                    id: "y",
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
2 | # The parser should recover from this syntax error.
3 | 
4 | with : ...
  |      ^ Syntax Error: Expected the start of an expression after `with` keyword
5 | 
6 | x + y
  |
